# qmlbot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: issue-manager.yml
docs/: index.md
qmlbot/: __init__.py  qmlbot.py
qmlbot/PythonTestCase/: TestCase.qml  qmldir
scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py  test_QMLBot.py
tests/dir_test/: CompNextToTest.qml  tst_B.qml  tst_common_errors.qml  tst_import.qml
tests/dir_test/subdir1/: tst_subdir1_A.qml  tst_subdir1_B.qml
tests/dir_test/subdir1/subdir2/: tst_subdir2_A.qml  tst_subdir2_B.qml
tests/fake_project/: SimpleComp.qml
